# Polly_Harness

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  Makefile  README.md  agentic.md  docker-compose.yml  harness_engineering_idea_i_have.md  pyproject.toml  requirements_doc.md
.github/workflows/: ci.yml  distill.yml  evals.yml
app/: __init__.py  config.py
app/api/: __init__.py  lifespan.py  main.py
app/context/: __init__.py  compactor.py  customer_context_builder.py  retriever.py
app/domain/: __init__.py  models.py
app/graph/: __init__.py  edges.py  refund_graph.py  state.py
app/instructions/: __init__.py  langfuse_sync.py  loader.py
app/learning/: __init__.py  distill_cli.py  incident_distiller.py  incident_logger.py
app/mcp/: __init__.py  server.py
app/observability/: __init__.py  event_types.py  langfuse_client.py  (+3 more)
docs/: architecture.md
eval/: ARCHITECTURE.md  EVAL_RESULTS.md  IMPROVEMENT_LOG.md  PRODUCTION_GRADE_POSTMORTEM.md  __init__.py  calibration.py  compile_results.py  generate_adversarial_cases.py  generate_synthetic_data.py  ground_truth.json  report.py  run_scenarios.py  run_simulation.py  seed_cases.yaml  thresholds.yaml
frontend/: __init__.py  app.py  portfolio_data.py
prompts/: denial_rewriter.md  distiller.md  fraud_check_subagent.md  intent_classifier.md  system_refund_agent.md
scripts/: __init__.py  burn_5_cases.py  check_doc_references.py  langfuse_bootstrap.py  seed_qdrant.py  verify_quickstart.sh
skills/: explain_denial_with_alternative.md  handle_emotional_escalation.md  verify_identity.md
specs/: README.md  SPEC_API.md  SPEC_CONTEXT.md  SPEC_DEMO_SCRIPT.md  SPEC_EVAL.md  SPEC_EXECUTION.md  SPEC_FRONTEND.md  SPEC_INCIDENT_LOOP.md  SPEC_INSTRUCTIONS.md  SPEC_MCP_SERVER.md  SPEC_OBSERVABILITY.md  SPEC_ORCHESTRATION.md  SPEC_SKILLS.md  SPEC_STATE.md  SPEC_SUBAGENTS.md  SPEC_TOOLS.md  SPEC_VERIFICATION.md
tests/: conftest.py  test_api.py  test_bootstrap.py  test_context.py  test_doc_references.py  test_domain_models.py  test_eval.py  test_eval_adversarial.py  test_eval_judges.py  test_eval_runner.py  test_event_emitter.py  test_execution.py  test_frontend.py  test_graph.py  test_incident_loop.py  test_instructions.py  test_mcp_server.py  test_observability.py  test_skills.py  test_state.py  test_subagents.py  test_tools.py  test_verification.py
(+145 files in other folders)
