[project]
name = "refund-harness"
version = "0.1.0"
description = "Harness-engineered AI customer support agent for e-commerce refund processing"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Ansuman SS Bhujabala", email = "dev@anyfeast.com" }]
license = { text = "MIT" }

dependencies = [
    # Agent framework
    "langgraph>=0.2.50",
    "langgraph-checkpoint-sqlite>=2.0.1",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",

    # LLM provider (Azure OpenAI compatible via langchain-openai)
    "openai>=1.50.0",

    # Vector DB
    "qdrant-client>=1.12.0",
    "fastembed>=0.4.0",

    # MCP tool protocol
    "mcp>=1.0.0",

    # Observability + prompts + evals + cache
    "langfuse>=2.50.0",

    # API + frontend
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    "gradio>=5.0.0",

    # Data
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",

    # Skill layer frontmatter parser
    "python-frontmatter>=1.1.0",

    # HTTP for tool sandboxing
    "httpx>=0.27.0",

    # Tokenizer / utility
    "tiktoken>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "httpx>=0.27.0",
    "respx>=0.21.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=app --cov-report=term-missing"
markers = [
    "unit: fast deterministic unit tests with no I/O",
    "integration: tests touching Qdrant / SQLite / Langfuse",
    "eval: scenario-based eval (slow, may call LLM)",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
]
